[gd_scene load_steps=15 format=3 uid="uid://cro20b2hjcpas"]

[ext_resource type="Script" uid="uid://cun3y3uayks1" path="res://scripts/title.gd" id="1_xyw42"]
[ext_resource type="Texture2D" uid="uid://bxog67ekolysf" path="res://assets/textures/title.png" id="2_g7r5d"]
[ext_resource type="AudioStream" uid="uid://dsw3yna6578sd" path="res://assets/Music/old-broken-music-box.mp3" id="3_q4tk4"]
[ext_resource type="Texture2D" uid="uid://bvc163sy3bhy5" path="res://assets/textures/Debug_Buttonnormal.png" id="4_j216o"]
[ext_resource type="Texture2D" uid="uid://dwn6mhu6qnjni" path="res://assets/textures/Debug_Buttonpress.png" id="5_21chh"]
[ext_resource type="Texture2D" uid="uid://dgcmk6ykod8bo" path="res://assets/textures/Debug_Buttonhover.png" id="6_1jyj6"]
[ext_resource type="FontFile" uid="uid://b180ngqbauhqp" path="res://assets/fonts/m5x7.ttf" id="7_cvyj1"]
[ext_resource type="Texture2D" uid="uid://vyqe2oc17ctb" path="res://assets/textures/black21.png" id="8_21chh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cbqqk"]
texture = ExtResource("5_21chh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mxc02"]
texture = ExtResource("6_1jyj6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iypfj"]
texture = ExtResource("4_j216o")

[sub_resource type="Animation" id="Animation_21chh"]
resource_name = "startgame"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black21:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1jyj6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black21:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cvyj1"]
_data = {
&"RESET": SubResource("Animation_1jyj6"),
&"startgame": SubResource("Animation_21chh")
}

[node name="title" type="Node2D"]
script = ExtResource("1_xyw42")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(120, 80)
texture = ExtResource("2_g7r5d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_q4tk4")

[node name="DevButton" type="Button" parent="."]
z_index = 999
offset_left = 56.0
offset_top = 66.0
offset_right = 153.0
offset_bottom = 82.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_cvyj1")
theme_override_styles/normal = SubResource("StyleBoxTexture_cbqqk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mxc02")
theme_override_styles/hover = SubResource("StyleBoxTexture_iypfj")
text = "PLAY"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 15.0
offset_top = 144.0
offset_right = 226.0
offset_bottom = 158.0
theme_override_fonts/normal_font = ExtResource("7_cvyj1")
text = "COPYRIGHT (c) 1996 TomoSoft Games"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cvyj1")
}

[node name="Black21" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 4096
position = Vector2(121.5, 81)
scale = Vector2(15.4375, 10.5)
texture = ExtResource("8_21chh")

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="DevButton" to="." method="_on_dev_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
